--- a/cv.html
+++ b/cv.html
@@ -76,7 +76,7 @@
 <li>Certified Kubernetes Administrator (CKA)</li>
 <li>Certified Kubernetes Application Developer (CKAD)</li>
 <li>LPIC-2</li>
-<li><CCNA</li>
+<li>CCNA</li>
 <li>MCITP</li>
 <li>AWS Solution Architect Professional</li>
 <li>AWS Solution Architect Associate</li>
