--- a/cv.html
+++ b/cv.html
@@ -63,6 +63,7 @@
 <ul>
 <li>Kubernetes</li>
 <li>AWS/GCP/OpenStack</li>
+<li>CI/CD & GitOps toolset</li>
 <li>Python</li>
 <li>Golang</li>
 <li>Shell</li>
