--- a/cv.html
+++ b/cv.html
@@ -20,7 +20,7 @@
 </head>
 <head>
 <meta charset="utf-8">
-<title>Hai Dam| DevOps Engineer</title>
+<title>Hai Dam | DevOps Engineer</title>
 
 </head>
 <body>
@@ -89,12 +89,28 @@
 <h3 id="experience">Experience</h3>
 
 <dl>
+<dt><a href="https://www.vndirect.com.vn/">VNDirect Securities Corporation</a> - Hanoi, Vietnam</dt>
+<dd>
+<p><em>Head of DevOps</em></p>
+</dd>
+
+<dd><strong>Oct 2021 - Present</strong></dd>
+</dl>
+
+<ul>
+<li>Oversees and guides all activities of the junior DevOps teams.</li>
+<li>Design and build infrastructure for sites/software, ensuring the highest levels of security and responding swiftly to any new and emerging vulnerabilities and security threats.;</li>
+<li>Standardize the processes for managing, maintaining, and securing ad-hoc Linux-based environments to ensure consistent and timely setup, configuration, and availability;</li>
+<li>Draft and maintain detailed, up-to-date technical documentation and user guides;</li>
+</ul>
+            
+<dl>
 <dt><a href="https://www.fortna.com/">Fortna Inc</a> - Hanoi, Vietnam</dt>
 <dd>
 <p><em>Senior DevOps Engineer</em></p>
 </dd>
 
-<dd><strong>Oct 2020 - Present</strong></dd>
+<dd><strong>Oct 2020 - Oct 2021</strong></dd>
 </dl>
 
 <ul>
