--- a/cv.html
+++ b/cv.html
@@ -100,7 +100,9 @@
 <ul>
 <li>Oversees and guides all activities of the junior DevOps teams.</li>
 <li>Design and build infrastructure for sites/software, ensuring the highest levels of security and responding swiftly to any new and emerging vulnerabilities and security threats.;</li>
-<li>Standardize the processes for managing, maintaining, and securing ad-hoc Linux-based environments to ensure consistent and timely setup, configuration, and availability;</li>
+<li>Creates tools and automated workflow capabilities in order to enable the business’s software engineering teams to test and promote code across the engineering department;</li>
+<li>Builds, configures, and maintains the frameworks, tools, and systems that enable optimal performance of the business’s sites/software; design and implementation of real-time monitoring systems of these sites/software.</li>
+<li>Works hand-in-hand with the frontend and backend engineering teams in all technical operations and works to reduce or eliminate any repetitive or manual tasks.</li>
 <li>Draft and maintain detailed, up-to-date technical documentation and user guides;</li>
 </ul>
             
