--- a/cv.html
+++ b/cv.html
@@ -76,6 +76,7 @@
 <ul>
 <li>Certified Kubernetes Administrator (CKA)</li>
 <li>Certified Kubernetes Application Developer (CKAD)</li>
+<li>Certified Kubernetes Security Specialist (CKS)</li>
 <li>Certified SAFe® 5 Practitioner</li>
 <li>AWS Solution Architect Professional</li>
 <li>AWS Solution Architect Associate</li>
@@ -98,10 +99,10 @@
 </dl>
 
 <ul>
-<li>Oversees and guides all activities of the junior DevOps teams.</li>
+<li>Oversee and guide all activities of the junior DevOps teams.</li>
 <li>Design and build infrastructure for sites/software, ensuring the highest levels of security and responding swiftly to any new and emerging vulnerabilities and security threats.;</li>
-<li>Creates tools and automated workflow capabilities in order to enable the business’s software engineering teams to test and promote code across the engineering department;</li>
-<li>Builds, configures, and maintains the frameworks, tools, and systems that enable optimal performance of the business’s sites/software; design and implementation of real-time monitoring systems of these sites/software.</li>
+<li>Create tools and automated workflow capabilities in order to enable the business’s software engineering teams to test and promote code across the engineering department;</li>
+<li>Build, configure, and maintain the frameworks, tools, and systems that enable optimal performance of the business’s sites/software; design and implementation of real-time monitoring systems of these sites/software.</li>
 <li>Works hand-in-hand with the frontend and backend engineering teams in all technical operations and works to reduce or eliminate any repetitive or manual tasks.</li>
 <li>Draft and maintain detailed, up-to-date technical documentation and user guides;</li>
 </ul>
