--- a/cv.html
+++ b/cv.html
@@ -27,7 +27,7 @@
     <div class="container">
         <h1>Hai Dam</h1>
 
-<h2>DevOps Engineer</h2>
+<h2>DevOps Manager/Head of SREs</h2>
 
 <blockquote>
   <p><a href="mailto:haidv.ict@gmail.com">haidv.ict@gmail.com</a></p>
@@ -35,18 +35,13 @@
   <p><a href="https://me.haidv.tech">https://me.haidv.tech</a></p>
   <p><a href="https://www.linkedin.com/in/iluisreyes/">References: Luis Reyes - Enterprise Architecture & DevOps</a></p>
   <p><a href="tel:+813-727-998-2002">Tel: 727-998-2002</a></p>
-
-        
 </blockquote>
-
 <hr />
-
 <h3 id="skill">Skills</h3>
-
 <ul>
 <li><dl>
 <dt>System Architect</dt>
-<dd>Design system &amp; infrastructure to suite engineering &amp; business requirement</dd>
+<dd>Design system &amp; infrastructure to suite engineering &amp; business requirement.</dd>
 </dl></li>
 <li><dl>
 <dt>DevOps</dt>
@@ -54,59 +49,61 @@
 </dl></li>
 <li><dl>
 <dt>SRE</dt>
-<dd>Develop &amp; maintain monitoring services</dd>
+<dd>Develop &amp; maintain monitoring services.</dd>
 </dl></li>
 </ul>
 
 <h3 id="stack">Stack</h3>
-
-<ul>
-<li>Kubernetes</li>
-<li>AWS/GCP/OpenStack</li>
-<li>CI/CD & GitOps toolset</li>
-<li>Python</li>
-<li>Golang</li>
-<li>Shell</li>
-<li>VoIP</li>
-<li>Unix</li>
-</ul>
-
+  <ul>
+    <li>Kubernetes</li>
+    <li>AWS/GCP/Azure/OpenStack</li>
+    <li>CI/CD & GitOps toolset</li>
+    <li>Python</li>
+    <li>Golang</li>
+    <li>Shell</li>
+    <li>VoIP</li>
+    <li>Unix</li>
+  </ul>
 <h3 id="certifications">Certifications</h3>
-
-<ul>
-<li>Certified Kubernetes Administrator (CKA)</li>
-<li>Certified Kubernetes Application Developer (CKAD)</li>
-<li>Certified Kubernetes Security Specialist (CKS)</li>
-<li>Certified SAFe® 5 Practitioner</li>
-<li>AWS Solution Architect Professional</li>
-<li>AWS Solution Architect Associate</li>
-<li>LPIC-2</li>
-<li>CCNA</li>
-<li>MCITP</li>
-<li>Genesys Certified Professional Support</li>
-<li>Getting started with AI on Jetson Nano</li>
-</ul>
-
+  <ul>
+    <li>Certified Kubernetes Administrator (CKA)</li>
+    <li>Certified Kubernetes Application Developer (CKAD)</li>
+    <li>Certified Kubernetes Security Specialist (CKS)</li>
+    <li>Certified SAFe® 5 Practitioner</li>
+    <li>AWS Solution Architect Professional</li>
+    <li>AWS Solution Architect Associate</li>
+    <li>LPIC-2</li>
+    <li>CCNA</li>
+    <li>MCITP</li>
+    <li>Genesys Certified Professional Support</li>
+    <li>Getting started with AI on Jetson Nano</li>
+  </ul>
 <h3 id="experience">Experience</h3>
-
+<dl>
+<dt><a href="https://www.belle.ai/">Belle Torus AI</a> - Hanoi, Vietnam</dt>
+  <dd>
+  <p><em>Head of SREs</em></p>
+  </dd>
+  <dd><strong>Aug 2021 - Present</strong></dd>
+</dl>
+<dd>Accountable for the SRE, DevOps, Infrastructure engineering functions within BelleTorus. These teams are responsible:</dd>
+<ul>
+The security and observability of the BelleTorus infrastructure and the applications that are part of the platform
+<li>Providing a stable, maintainable, and secure deployment of our applications</li>
+<li>All aspects of deployment of our applications, veto rights on things that negatively affect our ability to deploy scalably and securely</li>
+<li>Deliver and maintain solid, production-ready service for any product BelleTorus builds e.g. microservices, DBs, App servers, DevOps tools</li>
+</ul>
 <dl>
 <dt><a href="https://www.vndirect.com.vn/">VNDirect Securities Corporation</a> - Hanoi, Vietnam</dt>
 <dd>
 <p><em>Head of DevOps</em></p>
 </dd>
-
 <dd><strong>Aug 2021 - Present</strong></dd>
 </dl>
-
 <ul>
-<li>Oversee and guide all activities of the junior DevOps teams.</li>
-<li>Design and build infrastructure for sites/software, ensuring the highest levels of security and responding swiftly to any new and emerging vulnerabilities and security threats.;</li>
-<li>Create tools and automated workflow capabilities in order to enable the business’s software engineering teams to test and promote code across the engineering department;</li>
-<li>Build, configure, and maintain the frameworks, tools, and systems that enable optimal performance of the business’s sites/software; design and implementation of real-time monitoring systems of these sites/software.</li>
-<li>Works hand-in-hand with the frontend and backend engineering teams in all technical operations and works to reduce or eliminate any repetitive or manual tasks.</li>
-<li>Draft and maintain detailed, up-to-date technical documentation and user guides;</li>
+<li>Manage a team of DevOps professionals working to deliver production uptime, provide stable internal infrastructure, and facilitate the rapid iteration and release of features to production.</li>
 </ul>
-            
+
 <dl>
 <dt><a href="https://www.fortna.com/">Fortna Inc</a> - Hanoi, Vietnam</dt>
 <dd>
@@ -147,45 +144,37 @@
 
 <dd><strong>Nov 2018 - Jan 2020</strong></dd>
 </dl>
-
 <ul>
-<li>Deploy &amp; maintain application server, decentralized system in blockchains.</li>
-<li>Develop DevOps software from design specifications</li>
-<li>Perform code reviews, code refactors.</li>
-<li>Planning, implement and document unit/functional/intergration tests.</li>
+  <li>Deploy &amp; maintain application server, decentralized system in blockchains.</li>
+  <li>Develop DevOps software from design specifications</li>
+  <li>Perform code reviews, code refactors.</li>
+  <li>Planning, implement and document unit/functional/intergration tests.</li>
 </ul>
-
 <dl>
 <dt><a href="https://www.netcompany.com/int" title="Netcompany">Netcompany</a> - Hanoi, Vietnam</dt>
 <dd>
 <p><em>Senior DevOps Engineer</em></p>
 </dd>
-
 <dd><strong>Feb 2018 – Nov 2018</strong></dd>
 </dl>
-
 <ul>
-<li>Design, implement and administer DevOps solution for .Net/Java/JS Family/React Native builds using Jenkins/Bitrise.io/Fastlane/CircleCI.</li>
-<li>Developed automation and deployment utilities using Bash, Python.</li>
+  <li>Design, implement and administer DevOps solution for .Net/Java/JS Family/React Native builds using Jenkins/Bitrise.io/Fastlane/CircleCI.</li>
+  <li>Developed automation and deployment utilities using Bash, Python.</li>
 </ul>
-
 <dl>
 <dt><a href="https://co-well.vn/" title="Co-Well">Co-Well</a> - Hanoi, Vietnam</dt>
 <dd>
 <p><em>DevOps Engineer &amp; AWS Architect</em></p>
 </dd>
-
 <dd><strong>Apr 2017 – Feb 2018</strong></dd>
 </dl>
-
 <ul>
-<li>Integrating AWS services with CI/CD tools (CircleCI, Ansible, Chef, Puppet, Salt,TravisCI, Vagrant&#8230;)</li>
-<li>Developing with RESTful API interfaces.</li>
-<li>Monitoring infrastructure with Zabbix, Prometheus, and Grafana </li>
-<li>Programming with AWS APIs (Python, Nodejs), Infrastructure as Code with Terraform.</li>
-<li>General troubleshooting and debugging</li>
+  <li>Integrating AWS services with CI/CD tools (CircleCI, Ansible, Chef, Puppet, Salt,TravisCI, Vagrant&#8230;)</li>
+  <li>Developing with RESTful API interfaces.</li>
+  <li>Monitoring infrastructure with Zabbix, Prometheus, and Grafana </li>
+  <li>Programming with AWS APIs (Python, Nodejs), Infrastructure as Code with Terraform.</li>
+  <li>General troubleshooting and debugging</li>
 </ul>
-
 <dl>
 <dt><a href="http://taxigroup.com.vn/" title="DEVELOPMENT AND INVESTMENT COOPERATION JSC (IC&D)">IC&D Cooperation</a> - Hanoi, Vietnam</dt>
 <dd>
