--- a/cv.html
+++ b/cv.html
@@ -22,208 +22,208 @@
 <title>Hai Dam | DevOps Engineer</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Hai Dam</h1>
-<h2>DevOps Manager/Head of SREs</h2>
-<blockquote>
-  <p><a href="mailto:haidv.ict@gmail.com">haidv.ict@gmail.com</a></p>
-  <p><a href="tel:+840936211001">Call me at +84-936-211001</a></p>
-  <p><a href="https://me.haidv.tech">https://me.haidv.tech</a></p>
-  <p><a href="https://www.linkedin.com/in/iluisreyes/">References: Luis Reyes - Enterprise Architecture & DevOps</a></p>
-  <p><a href="tel:+813-727-998-2002">Tel: 727-998-2002</a></p>
-</blockquote>
-<hr />
-<h3 id="skill">Skills</h3>
-<ul>
-<li><dl>
-<dt>System Architect</dt>
-<dd>Design system &amp; infrastructure to suite engineering &amp; business requirement.</dd>
-</dl></li>
-<li><dl>
-<dt>DevOps</dt>
-<dd>Implement CI/CD pipline, Infrastructure as code with terraform, chatops, gitops, &#8230;</dd>
-</dl></li>
-<li><dl>
-<dt>SRE</dt>
-<dd>Develop &amp; maintain monitoring services.</dd>
-</dl></li>
-</ul>
+  <div class="container">
+  <h1>Hai Dam</h1>
+  <h2>DevOps Manager/Head of SREs</h2>
+  <blockquote>
+    <p><a href="mailto:haidv.ict@gmail.com">haidv.ict@gmail.com</a></p>
+    <p><a href="tel:+840936211001">Call me at +84-936-211001</a></p>
+    <p><a href="https://me.haidv.tech">https://me.haidv.tech</a></p>
+    <p><a href="https://www.linkedin.com/in/iluisreyes/">References: Luis Reyes - Enterprise Architecture & DevOps</a></p>
+    <p><a href="tel:+813-727-998-2002">Tel: 727-998-2002</a></p>
+  </blockquote>
+  <hr />
+  <h3 id="skill">Skills</h3>
+  <ul>
+  <li><dl>
+  <dt>System Architect</dt>
+  <dd>Design system &amp; infrastructure to suite engineering &amp; business requirement.</dd>
+  </dl></li>
+  <li><dl>
+  <dt>DevOps</dt>
+  <dd>Implement CI/CD pipline, Infrastructure as code with terraform, chatops, gitops, &#8230;</dd>
+  </dl></li>
+  <li><dl>
+  <dt>SRE</dt>
+  <dd>Develop &amp; maintain monitoring services.</dd>
+  </dl></li>
+  </ul>
 
-<h3 id="stack">Stack</h3>
+  <h3 id="stack">Stack</h3>
+    <ul>
+      <li>Kubernetes</li>
+      <li>AWS/GCP/Azure/OpenStack</li>
+      <li>CI/CD & GitOps toolset</li>
+      <li>Python</li>
+      <li>Golang</li>
+      <li>Shell</li>
+      <li>VoIP</li>
+      <li>Unix</li>
+    </ul>
+  <h3 id="certifications">Certifications</h3>
+    <ul>
+      <li>Certified Kubernetes Administrator (CKA)</li>
+      <li>Certified Kubernetes Application Developer (CKAD)</li>
+      <li>Certified Kubernetes Security Specialist (CKS)</li>
+      <li>Certified SAFe® 5 Practitioner</li>
+      <li>AWS Solution Architect Professional</li>
+      <li>AWS Solution Architect Associate</li>
+      <li>LPIC-2</li>
+      <li>CCNA</li>
+      <li>MCITP</li>
+      <li>Genesys Certified Professional Support</li>
+      <li>Getting started with AI on Jetson Nano</li>
+    </ul>
+  <h3 id="experience">Experience</h3>
+  <dl>
+  <dt><a href="https://www.belle.ai/">Belle Torus AI</a> - Hanoi, Vietnam</dt>
+    <dd>
+    <p><em>Head of SREs</em></p>
+    </dd>
+    <dd><strong>Aug 2021 - Present</strong></dd>
+  </dl>
+  <dd>Accountable for the SRE, DevOps, Infrastructure engineering functions within BelleTorus. These teams are responsible:</dd>
   <ul>
-    <li>Kubernetes</li>
-    <li>AWS/GCP/Azure/OpenStack</li>
-    <li>CI/CD & GitOps toolset</li>
-    <li>Python</li>
-    <li>Golang</li>
-    <li>Shell</li>
-    <li>VoIP</li>
-    <li>Unix</li>
+  <li>The security and observability of the BelleTorus infrastructure and the applications that are part of the platform</li>
+  <li>Providing a stable, maintainable, and secure deployment of our applications</li>
+  <li>All aspects of deployment of our applications, veto rights on things that negatively affect our ability to deploy scalably and securely</li>
+  <li>Deliver and maintain solid, production-ready service for any product BelleTorus builds e.g. microservices, DBs, App servers, DevOps tools</li>
   </ul>
-<h3 id="certifications">Certifications</h3>
-  <ul>
-    <li>Certified Kubernetes Administrator (CKA)</li>
-    <li>Certified Kubernetes Application Developer (CKAD)</li>
-    <li>Certified Kubernetes Security Specialist (CKS)</li>
-    <li>Certified SAFe® 5 Practitioner</li>
-    <li>AWS Solution Architect Professional</li>
-    <li>AWS Solution Architect Associate</li>
-    <li>LPIC-2</li>
-    <li>CCNA</li>
-    <li>MCITP</li>
-    <li>Genesys Certified Professional Support</li>
-    <li>Getting started with AI on Jetson Nano</li>
-  </ul>
-<h3 id="experience">Experience</h3>
-<dl>
-<dt><a href="https://www.belle.ai/">Belle Torus AI</a> - Hanoi, Vietnam</dt>
+  <dl>
+  <dt><a href="https://www.vndirect.com.vn/">VNDirect Securities Corporation</a> - Hanoi, Vietnam</dt>
   <dd>
-  <p><em>Head of SREs</em></p>
+  <p><em>DevOps Manager</em></p>
   </dd>
-  <dd><strong>Aug 2021 - Present</strong></dd>
-</dl>
-<dd>Accountable for the SRE, DevOps, Infrastructure engineering functions within BelleTorus. These teams are responsible:</dd>
-<ul>
-<li>The security and observability of the BelleTorus infrastructure and the applications that are part of the platform</li>
-<li>Providing a stable, maintainable, and secure deployment of our applications</li>
-<li>All aspects of deployment of our applications, veto rights on things that negatively affect our ability to deploy scalably and securely</li>
-<li>Deliver and maintain solid, production-ready service for any product BelleTorus builds e.g. microservices, DBs, App servers, DevOps tools</li>
-</ul>
-<dl>
-<dt><a href="https://www.vndirect.com.vn/">VNDirect Securities Corporation</a> - Hanoi, Vietnam</dt>
-<dd>
-<p><em>Head of DevOps</em></p>
-</dd>
-<dd><strong>Aug 2021 - Present</strong></dd>
-</dl>
-<ul>
-<li>Manage a team of DevOps professionals working to deliver production uptime, provide stable internal infrastructure, and facilitate the rapid iteration and release of features to production.</li>
-</ul>
+  <dd><strong>Aug 2021 - Aug 2022</strong></dd>
+  </dl>
+  <ul>
+  <li>Manage a team of DevOps professionals working to deliver production uptime, provide stable internal infrastructure, and facilitate the rapid iteration and release of features to production.</li>
+  </ul>
 
-<dl>
-<dt><a href="https://www.fortna.com/">Fortna Inc</a> - Hanoi, Vietnam</dt>
-<dd>
-<p><em>Senior DevOps Engineer</em></p>
-</dd>
+  <dl>
+  <dt><a href="https://www.fortna.com/">Fortna Inc</a> - Hanoi, Vietnam</dt>
+  <dd>
+  <p><em>Senior DevOps Engineer</em></p>
+  </dd>
 
-<dd><strong>Oct 2020 - Oct 2021</strong></dd>
-</dl>
-  <ul>
-    <li>Support the Software Development team’s hardware and operational needs to support rapid delivery.</li>
-    <li>Implement CI/CD pipelines to automate configuring, provisioning, packaging, testing, and deployment;</li>
-    <li>Configure and deploy GUI front-end visualizations of builds, deployments, tests, telemetry, alerting, errors/logs, and health status;</li>
-    <li>Standardize the processes for managing, maintaining, and securing ad-hoc Linux-based environments to ensure consistent and timely setup, configuration, and availability;</li>
-    <li>Draft and maintain detailed, up-to-date technical documentation and user guides;</li>
-  </ul>
-<dl>
-<dt><a href="https://linagora.com">Linagora</a> - Hanoi, Vietnam</dt>
-<dd>
-<p><em>Senior DevOps Engineer</em></p>
-</dd>
+  <dd><strong>Oct 2020 - Oct 2021</strong></dd>
+  </dl>
+    <ul>
+      <li>Support the Software Development team’s hardware and operational needs to support rapid delivery.</li>
+      <li>Implement CI/CD pipelines to automate configuring, provisioning, packaging, testing, and deployment;</li>
+      <li>Configure and deploy GUI front-end visualizations of builds, deployments, tests, telemetry, alerting, errors/logs, and health status;</li>
+      <li>Standardize the processes for managing, maintaining, and securing ad-hoc Linux-based environments to ensure consistent and timely setup, configuration, and availability;</li>
+      <li>Draft and maintain detailed, up-to-date technical documentation and user guides;</li>
+    </ul>
+  <dl>
+  <dt><a href="https://linagora.com">Linagora</a> - Hanoi, Vietnam</dt>
+  <dd>
+  <p><em>Senior DevOps Engineer</em></p>
+  </dd>
 
-<dd><strong>Feb 2020 - Oct 2020</strong></dd>
-</dl>
-  <ul>
-    <li>Maintain &amp; Operate an OpenPaas system on OVH</li>
-    <li>Develop a framework based on Terraform, Ansible, Helm to allow cluster creation.</li>
-    <li>Write several tools for internal usage &amp; cluster management.</li>
-  </ul>
-<dl>
-<dt><a href="https://tomochain.com">Tomochain</a> - Hanoi, Vietnam</dt>
-<dd>
-<p><em>Senior DevOps Engineer</em></p>
-</dd>
+  <dd><strong>Feb 2020 - Oct 2020</strong></dd>
+  </dl>
+    <ul>
+      <li>Maintain &amp; Operate an OpenPaas system on OVH</li>
+      <li>Develop a framework based on Terraform, Ansible, Helm to allow cluster creation.</li>
+      <li>Write several tools for internal usage &amp; cluster management.</li>
+    </ul>
+  <dl>
+  <dt><a href="https://tomochain.com">Tomochain</a> - Hanoi, Vietnam</dt>
+  <dd>
+  <p><em>Senior DevOps Engineer</em></p>
+  </dd>
 
-<dd><strong>Nov 2018 - Jan 2020</strong></dd>
-</dl>
+  <dd><strong>Nov 2018 - Jan 2020</strong></dd>
+  </dl>
+    <ul>
+      <li>Deploy &amp; maintain application server, decentralized system in blockchains.</li>
+      <li>Develop DevOps software from design specifications</li>
+      <li>Perform code reviews, code refactors.</li>
+      <li>Planning, implement and document unit/functional/intergration tests.</li>
+    </ul>
+  <dl>
+  <dt><a href="https://www.netcompany.com/int" title="Netcompany">Netcompany</a> - Hanoi, Vietnam</dt>
+  <dd>
+  <p><em>Senior DevOps Engineer</em></p>
+  </dd>
+  <dd><strong>Feb 2018 – Nov 2018</strong></dd>
+  </dl>
+    <ul>
+      <li>Design, implement and administer DevOps solution for .Net/Java/JS Family/React Native builds using Jenkins/Bitrise.io/Fastlane/CircleCI.</li>
+      <li>Developed automation and deployment utilities using Bash, Python.</li>
+    </ul>
+  <dl>
+  <dt><a href="https://co-well.vn/" title="Co-Well">Co-Well</a> - Hanoi, Vietnam</dt>
+  <dd>
+  <p><em>DevOps Engineer &amp; AWS Architect</em></p>
+  </dd>
+  <dd><strong>Apr 2017 – Feb 2018</strong></dd>
+  </dl>
+    <ul>
+      <li>Integrating AWS services with CI/CD tools (CircleCI, Ansible, Chef, Puppet, Salt,TravisCI, Vagrant&#8230;)</li>
+      <li>Developing with RESTful API interfaces.</li>
+      <li>Monitoring infrastructure with Zabbix, Prometheus, and Grafana </li>
+      <li>Programming with AWS APIs (Python, Nodejs), Infrastructure as Code with Terraform.</li>
+      <li>General troubleshooting and debugging</li>
+    </ul>
+  <dl>
+  <dt><a href="http://taxigroup.com.vn/" title="DEVELOPMENT AND INVESTMENT COOPERATION JSC (IC&D)">IC&D Cooperation</a> - Hanoi, Vietnam</dt>
+  <dd>
+  <p><em>System Administrator Leader & Infrastructure Manager</em></p>
+  </dd>
+  <dd><strong>April 2016 – Apr 2017</strong></dd>
+  </dl>
   <ul>
-    <li>Deploy &amp; maintain application server, decentralized system in blockchains.</li>
-    <li>Develop DevOps software from design specifications</li>
-    <li>Perform code reviews, code refactors.</li>
-    <li>Planning, implement and document unit/functional/intergration tests.</li>
+  <li><em>System Administrator Leader:</em> install, implement and operator centralized contact centers over the IP medium (Elastix Asterisk)</li>
+  <li><em>Infrastructure Manager:</em></li>
+    <ul>
+      <li>Design and execute short plus long term strategic plans to assure infrastructure capacity attains current and future needs.</li>
+      <li>Develop, execute and oversee procedures, policies and related training plans for project management and infrastructure administration..</li>
+      <li>Manage and establish priorities for maintenance, design, development and analysis of entire infrastructure systems.</li>
+      <li>Test server performance plus provide network presentation statistics. Report and prepare strategies to maintain server infrastructure.</li>
+    </ul>
   </ul>
-<dl>
-<dt><a href="https://www.netcompany.com/int" title="Netcompany">Netcompany</a> - Hanoi, Vietnam</dt>
-<dd>
-<p><em>Senior DevOps Engineer</em></p>
-</dd>
-<dd><strong>Feb 2018 – Nov 2018</strong></dd>
-</dl>
-  <ul>
-    <li>Design, implement and administer DevOps solution for .Net/Java/JS Family/React Native builds using Jenkins/Bitrise.io/Fastlane/CircleCI.</li>
-    <li>Developed automation and deployment utilities using Bash, Python.</li>
-  </ul>
-<dl>
-<dt><a href="https://co-well.vn/" title="Co-Well">Co-Well</a> - Hanoi, Vietnam</dt>
-<dd>
-<p><em>DevOps Engineer &amp; AWS Architect</em></p>
-</dd>
-<dd><strong>Apr 2017 – Feb 2018</strong></dd>
-</dl>
-  <ul>
-    <li>Integrating AWS services with CI/CD tools (CircleCI, Ansible, Chef, Puppet, Salt,TravisCI, Vagrant&#8230;)</li>
-    <li>Developing with RESTful API interfaces.</li>
-    <li>Monitoring infrastructure with Zabbix, Prometheus, and Grafana </li>
-    <li>Programming with AWS APIs (Python, Nodejs), Infrastructure as Code with Terraform.</li>
-    <li>General troubleshooting and debugging</li>
-  </ul>
-<dl>
-<dt><a href="http://taxigroup.com.vn/" title="DEVELOPMENT AND INVESTMENT COOPERATION JSC (IC&D)">IC&D Cooperation</a> - Hanoi, Vietnam</dt>
-<dd>
-<p><em>System Administrator Leader & Infrastructure Manager</em></p>
-</dd>
-<dd><strong>April 2016 – Apr 2017</strong></dd>
-</dl>
-<ul>
-<li><em>System Administrator Leader:</em> install, implement and operator centralized contact centers over the IP medium (Elastix Asterisk)</li>
-<li><em>Infrastructure Manager:</em></li>
-  <ul>
-    <li>Design and execute short plus long term strategic plans to assure infrastructure capacity attains current and future needs.</li>
-    <li>Develop, execute and oversee procedures, policies and related training plans for project management and infrastructure administration..</li>
-    <li>Manage and establish priorities for maintenance, design, development and analysis of entire infrastructure systems.</li>
-    <li>Test server performance plus provide network presentation statistics. Report and prepare strategies to maintain server infrastructure.</li>
-  </ul>
-</ul>
-<dl>
-<dt><a href="http://www.ansv.vn" title="Advance Network System Vietnam">Advanced Network System Vietnam - VNPT Technology</a> - Hanoi, Vietnam</dt>
-<dd>
-<p><em>System Integration Engineer</em></p>
-</dd>
-<dd><strong>Feb 2011 – Apr 2016</strong></dd>
-</dl>
-  <ul>
-    <li>Install and implement centralized contact centers over the IP medium (Genesys Platform), TV over IP system with Vinaphone, Mobifone.</li>
-    <li>Writing presale system plan; Demonstrate and explain bidding plan, preparing the tender documents and answer questions from onsite customers.</li>
-    <li>Onsite support, including break-fix support, preplanned maintenance, machine and parts replacements, installations, moves and equipment changes.</li>
-    <li>Monitoring and resolve incidents, support and resolution of VAS, IT and network systems on a 24x7 basis and fine-tuning of the system, backup data, logs, CDR file.</li>
-    <li>Java web programming with Genesys tools.</li>
-  </ul>
-<h3 id="technicalreview">Technical Review Book for PACKT Publishing</h3>
-  <ul>
-    <li>Hands-On Continuous Integration and Delivery</li>
-    <li>Effective DevOps with AWS, Second Edition</li>
-    <li>Mastering DevOps Automation</li>
-    <li>Mastering Jenkins, Second Edition</li>
-  </ul>
-<h3 id="education">Education</h3>
-<dl><strong>Vietnam National University - Hanoi University of Engineering and Technology (UET)</strong></dl>
-<dl>
-<dt><strong>Master of Data Communication &amp; Computer Network</strong></dt>
-<dd><em>Information Technology</em></dd>
-<dd><strong>2016 – 2019</strong></dd>
-</dl>
-<ul>
-  <li>The program is based on the academic system (curriculum, syllabi, homework, examinations…) delivered in English.</li>
-</ul>
-<dl><strong>University of Transportation and Communication (UTC)</strong></dl>
-<dl>
-<dt><strong>Bachelor of Data Communication &amp; Computer Network</strong></dt>
-<dd><em>Information Technology</em></dd>
-<dd><strong>2007 – 2011</strong></dd>
-</dl>
+  <dl>
+  <dt><a href="http://www.ansv.vn" title="Advance Network System Vietnam">Advanced Network System Vietnam - VNPT Technology</a> - Hanoi, Vietnam</dt>
+  <dd>
+  <p><em>System Integration Engineer</em></p>
+  </dd>
+  <dd><strong>Feb 2011 – Apr 2016</strong></dd>
+  </dl>
+    <ul>
+      <li>Install and implement centralized contact centers over the IP medium (Genesys Platform), TV over IP system with Vinaphone, Mobifone.</li>
+      <li>Writing presale system plan; Demonstrate and explain bidding plan, preparing the tender documents and answer questions from onsite customers.</li>
+      <li>Onsite support, including break-fix support, preplanned maintenance, machine and parts replacements, installations, moves and equipment changes.</li>
+      <li>Monitoring and resolve incidents, support and resolution of VAS, IT and network systems on a 24x7 basis and fine-tuning of the system, backup data, logs, CDR file.</li>
+      <li>Java web programming with Genesys tools.</li>
+    </ul>
+  <h3 id="technicalreview">Technical Review Book for PACKT Publishing</h3>
+    <ul>
+      <li>Hands-On Continuous Integration and Delivery</li>
+      <li>Effective DevOps with AWS, Second Edition</li>
+      <li>Mastering DevOps Automation</li>
+      <li>Mastering Jenkins, Second Edition</li>
+    </ul>
+  <h3 id="education">Education</h3>
+  <dl><strong>Vietnam National University - Hanoi University of Engineering and Technology (UET)</strong></dl>
+  <dl>
+  <dt><strong>Master of Data Communication &amp; Computer Network</strong></dt>
+  <dd><em>Information Technology</em></dd>
+  <dd><strong>2016 – 2019</strong></dd>
+  </dl>
   <ul>
     <li>The program is based on the academic system (curriculum, syllabi, homework, examinations…) delivered in English.</li>
   </ul>
+  <dl><strong>University of Transportation and Communication (UTC)</strong></dl>
+  <dl>
+  <dt><strong>Bachelor of Data Communication &amp; Computer Network</strong></dt>
+  <dd><em>Information Technology</em></dd>
+  <dd><strong>2007 – 2011</strong></dd>
+  </dl>
+    <ul>
+      <li>The program is based on the academic system (curriculum, syllabi, homework, examinations…) delivered in English.</li>
+    </ul>
 </div>
 </body>
 </html>
