--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
         <main>
-                <div class="intro">kubectl explain Hai.D</div>
+                <div class="intro">kubectl explain Harry</div>
                 <div class="tagline">AWS | GCP | CKS | CKA | CKAD | DevOps | Pythonista | Tobe Gopher</div>
                 <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
                 <div class="icons-social">
