--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a target="_blank" href="https://me.haidv.tech/cv"><i class="fas fa-file"></i></a>
                         <a target="_blank" href="mailto:haidv.ict@gmail.com"><i class="far fa-envelope-open"></i></a>
                         <a target="_blank" href="https://github.com/naviat"><i class="fab fa-github"></i></a>
-                        <a target="_blank" href="https://twitter.com/HaiDV204"><i class="fab fa-twitter"></i></a>
+                        <a target="_blank" href="https://twitter.com/_harry_d_"><i class="fab fa-twitter"></i></a>
                         <a target="_blank" href="https://www.linkedin.com/in/haidv"><i class="fab fa-linkedin"></i></a>
                         <a target="_blank" href="https://medium.com/@haidv.ict"><i class="fab fa-medium"></i></a>
                         <a target="_blank" href="https://blog.haidv.tech"><i class="fab fa-blogger-b"></i></a>
