--- a/resumes.html
+++ b/resumes.html
@@ -10,127 +10,55 @@
 <body>
     <div class="container">
         <header>
-            <h1>Hai Dam</h1>
-            <h2>DevOps Manager / Head of SREs</h2>
-            <ul class="headerInfo">
-                <li>{LOCATION} (Open to Remote)</li>
-                <li>{PHONE}</li>
-                <li>{EMAIL}</li>
-                <li>LinkedIn: <a href="https://{LINKEDIN}">{LINKEDIN}</a></li>
-                <li>GitHub: <a href="https://{GITHUB}">{GITHUB}</a></li>
-                <li>Portfolio: <a href="https://{PORTFOLIO}">{PORTFOLIO}</a></li>
-            </ul>
+            <h1>Hai Dam (Harry)</h1>
+            <p>Edmonton, AB - T6W 1B8 (Open to Remote) | (639) 382-8589 | <a href="mailto:haidv.ict@gmail.com">haidv.ict@gmail.com</a></p>
+            <p><a href="https://linkedin.com/in/vhd204">linkedin.com/in/vhd204</a> | <a href="https://github.com/naviat">github.com/naviat</a> | <a href="https://me.haidv.tech">me.haidv.tech</a></p>
         </header>
 
         <section>
-            <h3>Technical Skills</h3>
+            <h2>Technical Skills</h2>
             <ul>
-                <li><strong>Clouds/Platforms</strong>: Kubernetes (CKA, CKAD, CKS certified), AWS, GCP, Azure, OpenStack, VMWare, Proxmox, VoIP</li>
-                <li><strong>DevOps/SREs</strong>: GitHub Action, Jenkins, Azure DevOps, Prometheus, Kafka, LGTM stack, EFK stack, ECK, NewRelic</li>
-                <li><strong>Languages/Tools</strong>: Python, Terraform/Terragrunt, Reloader, Ansible, Chef, Shell, Unix, Agile SAFe 5, SonarQube, Robusta</li>
+                <li><strong>Clouds/Platforms:</strong> Kubernetes (CKA, CKAD, CKS certified), AWS, GCP, Azure, OpenStack, VMWare, Proxmox, VoIP</li>
+                <li><strong>DevOps/SREs:</strong> GitHub Action, Jenkins, Azure DevOps, Prometheus, Kafka, LGTM stack, EFK stack, ECK, NewRelic</li>
+                <li><strong>Languages/Tools:</strong> Python, Terraform/Terragrunt, Reloader, Ansible, Chef, Shell, Unix, Agile SAFe 5, SonarQube, Robusta</li>
             </ul>
         </section>
 
         <section>
-            <h3>Experience & Projects</h3>
-            <div class="box">
-                <h4>Infrastructure/ Site Reliability Engineer | Chainstack | May 2024 - Present</h4>
-                <p><em>Blockchain Infrastructure Provider</em></p>
-                <ul>
-                    <li>Maintained and continuously improved the reliability and scalability of blockchain nodes (~30 protocols) and networks across multiple global cloud providers.</li>
-                    <li>Created and managed hybrid infrastructures focusing on multi-cloud Kubernetes clusters using Infrastructure as Code (IaC).</li>
-                    <li>Achieved 99.99% SLA by enhancing monitoring and alerting systems, reducing downtime incidents by 20%.</li>
-                    <li>Automated repetitive processes, reducing workload by 30%, contributing to scalability and performance improvements.</li>
-                </ul>
-            </div>
+            <h2>Experience & Projects</h2>
+            <h3>Infrastructure/Site Reliability Engineer | Chainstack (May 2024 - Present)</h3>
+            <p><em>Blockchain Infrastructure Provider</em></p>
+            <ul>
+                <li>Maintained and improved reliability and scalability of blockchain nodes (~30 protocols) and networks across multiple global cloud providers.</li>
+                <li>Created complex hybrid infrastructures using multi-cloud Kubernetes clusters with Infrastructure as Code (IaC).</li>
+                <li>Achieved 99.99% SLA for all services, reducing downtime incidents by 20%.</li>
+                <li>Automated processes to reduce workload by 30% and increase system scalability.</li>
+            </ul>
 
-            <div class="box">
-                <h4>Senior DevOps Engineer | Prophet Exchange | Feb 2022 - May 2024</h4>
-                <p><em>Peer-to-peer sports betting</em></p>
-                <ul>
-                    <li>Led DevOps initiatives and architecture design, integrating AWS services and data streaming with Debezium.</li>
-                    <li>Automated cloud solutions using Terraform/Terragrunt and ArgoCD, achieving 40% cost reduction.</li>
-                </ul>
-            </div>
+            <h3>Senior DevOps Engineer | Prophet Exchange (Feb 2022 - May 2024)</h3>
+            <p><em>Peer-to-peer sports betting</em></p>
+            <ul>
+                <li>Led AWS infrastructure for New Jersey, US, and integrated AWS services with Terraform/Terragrunt, achieving a 40% cost reduction.</li>
+                <li>Developed data streaming solutions using Debezium and automated cloud-native structures.</li>
+            </ul>
 
-            <div class="box">
-                <h4>Head of SREs | Torus Engineering (Belle AI Corp) | Oct 2021 - Jun 2023</h4>
-                <p><em>AI solutions in healthcare</em></p>
-                <ul>
-                    <li>Enhanced AI system performance by 25% and reduced resource wastage by 30% through GPU optimization.</li>
-                    <li>Led a dynamic SRE team to a 20% productivity increase, streamlining ML model deployment pipelines.</li>
-                </ul>
-            </div>
-
-            <div class="box">
-                <h4>DevOps Manager | VNDirect Securities Corp | Aug 2021 - Aug 2022</h4>
-                <ul>
-                    <li>Managed a team of 5 focused on maximizing production uptime and improving infrastructure for 2000+ VMs.</li>
-                </ul>
-            </div>
-
-            <div class="box">
-                <h4>Senior DevOps Engineer | Fortna Inc | Oct 2020 - Aug 2021</h4>
-                <ul>
-                    <li>Enhanced CI/CD processes and development pipelines, championing Jenkins pipeline adoption.</li>
-                </ul>
-            </div>
-
-            <div class="box">
-                <h4>Senior DevOps Engineer | Linagora | Feb 2020 - Oct 2020</h4>
-                <ul>
-                    <li>Maintained and operated OpenPaas on OVH cloud, utilizing Apache James.</li>
-                </ul>
-            </div>
-
-            <div class="box">
-                <h4>Senior DevOps Engineer | Tomochain | Nov 2018 - Nov 2019</h4>
-                <ul>
-                    <li>Managed decentralized systems and launched blockchain application servers, including DEX and Tomo Network node.</li>
-                </ul>
-            </div>
-
-            <div class="box">
-                <h4>DevOps Engineer | Various Consulting Companies | 2016 - Nov 2018</h4>
-                <ul>
-                    <li>Engineered and managed solutions for .NET, Java, and React Native builds using Jenkins and Bitrise.io.</li>
-                </ul>
-            </div>
-
-            <div class="box">
-                <h4>System Integration Engineer | Various Telecom Companies | 2011 - 2015</h4>
-                <ul>
-                    <li>Managed IP contact centers and value-added services in the telecommunications domain.</li>
-                </ul>
-            </div>
+            <!-- Add more experiences here -->
         </section>
 
         <section>
-            <h3>Awards and Certificates</h3>
-            <div class="container">
-                <div class="box">
-                    <p><strong>Kubernetes Certified</strong>: CK(AD), CKS</p>
-                </div>
-                <div class="box">
-                    <p><strong>Scale Agile</strong>: Certified SAFe® 5 Practitioner</p>
-                </div>
-                <div class="box">
-                    <p><strong>AWS</strong>: AWS SAP, AWS SAA</p>
-                </div>
-                <div class="box">
-                    <p><strong>Network/Administrator</strong>: CCNA, MCITP, LPIC-2</p>
-                </div>
-                <div class="box">
-                    <p><strong>Genesys</strong>: Genesys Certified Professional Support, Genesys Certified SIP Professional</p>
-                </div>
-                <div class="box">
-                    <p><strong>AI</strong>: Getting started with AI on Jetson Nano</p>
-                </div>
-            </div>
+            <h2>Awards and Certificates</h2>
+            <ul>
+                <li><strong>Kubernetes Certified:</strong> CK(AD), CKS</li>
+                <li><strong>Scale Agile:</strong> Certified SAFe® 5 Practitioner</li>
+                <li><strong>AWS:</strong> AWS SAP, AWS SAA</li>
+                <li><strong>Network/Administrator:</strong> CCNA, MCITP, LPIC-2</li>
+                <li><strong>Genesys:</strong> Genesys Certified Professional Support, Genesys Certified SIP Professional</li>
+                <li><strong>AI:</strong> Getting started with AI on Jetson Nano</li>
+            </ul>
         </section>
 
         <section>
-            <h3>Education</h3>
+            <h2>Education</h2>
             <p><strong>Vietnam National University of Hanoi</strong> - Master of Data Communication & Computer Network - 2019</p>
             <p><strong>University of Transports and Communications</strong> - Bachelors of Data Communication & Computer Network - 2011</p>
         </section>
