--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a target="_blank" href="https://twitter.com/_harry_d_"><i class="fab fa-twitter"></i></a>
                         <a target="_blank" href="https://www.linkedin.com/in/haidv"><i class="fab fa-linkedin"></i></a>
                         <a target="_blank" href="https://medium.com/@haidv.ict"><i class="fab fa-medium"></i></a>
-                        <a target="_blank" href="https://blog.haidv.tech"><i class="fab fa-blogger-b"></i></a>
+                        <a target="_blank" href="https://harrydam.dev"><i class="fab fa-blogger-b"></i></a>
                         <a target="_blank" href="https://calendly.com/haidv-ict"><i class="far fa-calendar-plus"></i></a>
     </div>
         </main>
