--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Harry Dam | Cloud Enthusiast | Kubernetes Enthusiast </title>
+        <title>Harry Dam | Cloud Enthusiast | Kubernetes Enthusiast | Web3 </title>
 
         <link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -26,7 +26,7 @@
 <body>
         <main>
                 <div class="intro">kubectl explain Harry</div>
-                <div class="tagline">AWS | GCP | CKS | CKA | CKAD | DevOps | Pythonista | Tobe Gopher</div>
+                <div class="tagline">AWS | GCP | AZURE | CK(A, AD, S) | SRE/Platform | Pythonista | Gopher</div>
                 <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
                 <div class="icons-social">
                         <a target="_blank" href="Resume-HD.pdf"><i class="fas fa-file"></i></a>
