--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="tagline">AWS | GCP | AZURE | CK(A, AD, S) | SRE/Platform | Pythonista | Gopher</div>
                 <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
                 <div class="icons-social">
-                        <a target="_blank" href="Resume-HD.pdf"><i class="fas fa-file"></i></a>
+                        <a target="_blank" href="Resume.pdf"><i class="fas fa-file"></i></a>
                         <a target="_blank" href="mailto:haidv.ict@gmail.com"><i class="far fa-envelope-open"></i></a>
                         <a target="_blank" href="https://github.com/naviat"><i class="fab fa-github"></i></a>
                         <a target="_blank" href="https://twitter.com/_harry_d_"><i class="fab fa-twitter"></i></a>
